gccida/g0/announce_function
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/announce_function/src/diagnostic.c:1545:11: error: use of undeclared identifier 'off_76BE8C'
verbatim( off_76BE8C, v1); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/announce_function/src/obj/diagnostic.o] Error 1
